app/src/main/java/com/example/esyanev/proto1/errors/Error.java
package com.example.esyanev.proto1.errors;

/**
 * Created by esyanev on 30/01/18.
 */

public abstract class Error extends Exception{

    private String message;

    public Error(String message) {
        this.message = message;
    }

    public String getMessage() {
        return message;
    }
}
